--- a/styles/bot.css
+++ b/styles/bot.css
@@ -53,6 +53,7 @@
   border-radius: 10px;
   padding: 10px;
   margin-bottom: 5px;
+  background: white;
   /* for caret */
   margin-left: 20px;
   position: relative;
